# frontend-slides

./: COPILOT.md  README.md  STYLE_PRESETS.md
.copilot/commands/: convert-ppt.prompt.md  create-presentation.prompt.md  extract-content.prompt.md  find-topics.prompt.md  suggest-style.prompt.md  summarize-slides.prompt.md
.copilot/discovery/: presentation-patterns.md  skill-overview.md
mcp/: .gitignore  README.md  pyproject.toml  server.py
mcp/tools/: __init__.py  create_presentation.py  get_style_details.py  list_styles.py  preview_style.py  publish_presentation.py  styles.py
