[project]
name = "frontend-slides-mcp"
version = "1.0.0"
description = "MCP server for creating stunning HTML presentations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
frontend-slides-mcp = "server:main"
